libs/@local/config/tests/snapshots/files__file_invalid_value.snap
---
source: libs/@local/config/tests/files.rs
expression: rendered
---
the configuration could not be loaded
├╴at libs/@local/config/tests/files.rs:[line]:[column]
╰╴invalid type: found string, expected u16 at `store.port` in `config.toml`
