libs/@local/config/tests/snapshots/files__file_malformed_redaction.snap
---
source: libs/@local/config/tests/files.rs
expression: rendered
---
the configuration file is not valid TOML
├╴at libs/@local/config/src/file.rs:[line]:[column]
├╴config.toml
╰╴at line 2, column 51
