libs/@local/config/tests/snapshots/files__file_missing_required_value.snap
---
source: libs/@local/config/tests/files.rs
expression: rendered
---
the configuration could not be loaded
├╴at libs/@local/config/tests/files.rs:[line]:[column]
╰╴missing field `store.port` in `file` (config.toml)
