libs/@local/config/tests/snapshots/files__file_non_utf8.snap
---
source: libs/@local/config/tests/files.rs
expression: rendered
---
the configuration file could not be read
├╴at libs/@local/config/src/file.rs:[line]:[column]
├╴config.toml
│
╰─▶ stream did not contain valid UTF-8
    ╰╴at libs/@local/config/src/file.rs:[line]:[column]
