libs/@local/config/tests/snapshots/files__provenance_array_base.snap
---
source: libs/@local/config/tests/files.rs
expression: rendered
---
the configuration could not be loaded
├╴at libs/@local/config/tests/files.rs:[line]:[column]
╰╴invalid type: found signed integer, expected a string at `routes.0` in `base.toml`
