libs/@local/config/tests/snapshots/files__provenance_missing_field.snap
---
source: libs/@local/config/tests/files.rs
expression: rendered
---
the configuration could not be loaded
├╴at libs/@local/config/tests/files.rs:[line]:[column]
╰╴missing field `store.port`
