libs/@local/config/tests/snapshots/files__provenance_scalar_base.snap
---
source: libs/@local/config/tests/files.rs
expression: rendered
---
the configuration could not be loaded
├╴at libs/@local/config/tests/files.rs:[line]:[column]
╰╴invalid type: found string, expected u16 at `store.port` in `base.toml`
