libs/@local/config/tests/snapshots/files__provenance_scalar_override.snap
---
source: libs/@local/config/tests/files.rs
expression: rendered
---
the configuration could not be loaded
├╴at libs/@local/config/tests/files.rs:[line]:[column]
╰╴invalid type: found floating-point number, expected u16 at `store.port` in `override.toml`
